Corregido error de los nombres en las secciones fijas y otras cosas mas

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/js-yaml.min.js"></script>
     <script src="js/markdown-it.min.js"></script>
+    <script src="js/markdown-it-emoji.min.js"></script>
     <script src="js/html2pdf.bundle.min.js"></script>
     <script src="js/jszip.min.js"></script>
     <script src="js/ejs.min.js"></script>
